--- a/app/views/bestest_timer/_bestest_timer_partial.html.erb
+++ b/app/views/bestest_timer/_bestest_timer_partial.html.erb
@@ -6,7 +6,8 @@
     var bestest_timer = {
 	plugin:      <%= Redmine::Plugin.find(:bestest_timer).to_json.html_safe %>,
 	user_id:     <%= User.current.id.to_json.html_safe %>,
-	api_key:     <%= User.current.api_key.to_json.html_safe %>,
+	access:      <%= User.current.allowed_to?(:log_time, @project) %>,
+	api_key:     <%= (Setting.rest_api_enabled? ? User.current.api_key : nil).to_json.html_safe %>,
 	activities:  <%= (@project ? @project.activities : nil).to_json.html_safe %>,
 	project:     <%= @project.to_json.html_safe %>,
 	issue:       <%= @issue.to_json.html_safe %>,
