Order activities top-down instead of left-right.

--- a/assets/stylesheets/bestest_timer.css
+++ b/assets/stylesheets/bestest_timer.css
@@ -6,12 +6,20 @@
     border-radius: 3px;
 }
 
-.bestest_timer_dialog label {
-    display: inline-block;
-    box-sizing: border-box;
-    width: 50%;
+.bestest_timer_dialog .ui-dialog-titlebar-close {
+    display: none;
 }
 
-.bestest_timer_dialog .ui-dialog-titlebar-close {
-  display: none;
+.bestest_timer_activities {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+}
+
+.bestest_timer_activities label {
+    display: block;
+}
+
+.bestest_timer_dialog input[type='text'] {
+    width: 100%;
 }
