--- a/app/views/bestest_timer/_bestest_timer_partial.html.erb
+++ b/app/views/bestest_timer/_bestest_timer_partial.html.erb
@@ -9,7 +9,7 @@ var bestest_timer = {
 	user_id:     <%= User.current.id.to_json.html_safe %>,
 	access:      <%= User.current.allowed_to?(:log_time, @project) %>,
 	api_key:     <%= (Setting.rest_api_enabled? ? User.current.api_key : nil).to_json.html_safe %>,
-	activities:  <%= (@project.activities if @project and @project.id).to_json.html_safe %>,
+	activities:  <%= (@project.activities if @project and @project.id and @project.module_enabled?('time_tracking')).to_json.html_safe %>,
 	project:     <%= (@project if @project and @project.id).to_json.html_safe %>,
 	project_lnk: <%= (link_to_project(@project) if @project and @project.id).to_json.html_safe %>,
 	issue:       <%= (@issue if @issue and @issue.id).to_json.html_safe %>,
