Add styling for editable start time

--- a/assets/stylesheets/bestest_timer.css
+++ b/assets/stylesheets/bestest_timer.css
@@ -28,3 +28,10 @@
     width: 100%;
     box-sizing: border-box;
 }
+
+.bestest_timer_dialog input.bestest_timer_start {
+    width: 2em;
+    height: inherit;
+    padding: 0;
+    text-align: center;
+}
